--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
     "@radix-ui/react-slot": "^1.1.1",
+    "@tanstack/react-query": "^5.64.1",
+    "@tanstack/react-query-devtools": "^5.64.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "express": "^4.21.2",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^19.0.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "simple-peer": "^9.11.1",
