--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
+    "peerjs": "^1.5.4",
     "react": "^19.0.0",
     "react-countdown": "^2.3.6",
     "react-dom": "^19.0.0",
